--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       width:100%;
       position: relative;
       /* TODO: Update the following image */
-      background-image: url("./img/home/south_sister.jpg");
+      background-image: url("https://media.giphy.com/media/DTTQ5IIqeB75S/giphy.gif");
       background-repeat: no-repeat;
       background-size: 100% 300px;
     }
